# Laboratory_works

./: ArithmeticOperationsVar5.cpp  DataType2.cpp  DataType2.sln  README.md
lab 1/: CMakeLists.txt  main.cpp
lab 1/file/: time.txt
lab 1/inc/: Func.hpp
lab 1/src/: Func.cpp
lab 2/: CMakeLists.txt  main.cpp
lab 3/: CMakeLists.txt  main.cpp
lab 4/: CMakeLists.txt  README.md  main.cpp
lab 4/inc/: Shapes.hpp
lab 4/src/: Shapes.cpp
string1/: Strings3.cpp  input.txt
